Revert "help: 코드리뷰와 현 상황입니다"
This reverts commit 3536a8b5f948f8176cb3130896534fb738a734b3.